@@ -759,6 +759,35 @@ sub sort_order {
     $sortorder;
 }
 
+=item $form->convert_date($date, $myconfig)
+
+This takes a date in YYYY-MM-DD format and returns it in the format of the user.
+
+=cut
+
+sub convert_date {
+    my $self = shift @_;
+    my ($date, $myconfig) = @_;
+    my $newdate;
+    my $format = $myconfig->{dateformat};
+    my ($YYYY, $MM, $DD) = split /-/, $date; 
+    $format =~ /(\w+)(\W)(\w+)\W(\w+)/;
+    my $first  = $1;
+    my $sep    = $2;
+    my $second = $3;
+    my $third  = $4;
+
+    my @elems;
+    for my $pos ($first, $second, $third){
+        push @elems, $YYYY if uc($pos) eq 'YYYY';
+        push @elems, $MM if uc($pos) eq 'MM';
+        push @elems, $DD if uc($pos) eq 'DD';
+    }
+    $newdate = "$elems[0]$sep$elems[1]$sep$elems[2]";
+
+    return $newdate;
+}
+
 =item $form->format_amount($myconfig, $amount, $places, $dash);
 
 Returns $amount as formatted in the form specified by $form->{numberformat}.
