@@ -10,6 +10,7 @@ checking a price deal for a customer.
 -CT
 
 -->
+<?lsmb account_class = entity_class ?>
 <body>
 <div class="listtop"><?lsmb text('Pricelist') ?> <?lsmb pricematrix.length ?></div>
 <table>
