@@ -11,6 +11,8 @@ Supported Presently
 
 Changelog for LedgerSMB 1.3.7
 * Added foreign key of entity_credit_account.language_code (Herman V)
+* Fixed pricelist button (customer/vendor) producing error (Chris T)
+* Fixed date error when processing recurring transactions (Chris T)
 
 Changelog for LedgerSMB 1.3.6
 * Including xelatex templates under directory templates/xedemo (Chris T)
